# auto-flashcard

./: .gitignore  README.md  eslint.config.mjs  package-lock.json  package.json  vitest.config.ts  vitest.setup.ts
.github/ISSUE_TEMPLATE/: bug.md  feature.md  spike.md
.github/workflows/: lint-zustand-selectors.yml
api/: .env.example  Cargo.toml  Dockerfile  fly.toml
api/src/: chunker.rs  db.rs  handlers.rs  llm.rs  main.rs  md_parser.rs  models.rs  parsers.rs  pdf_parser.rs  pptx_parser.rs
docs/: architecture.html  architecture.md
src/app/: layout.tsx  page.tsx
src/app/document/[id]/: page.tsx
src/components/: DocumentList.tsx  ErrorBoundary.tsx  FlashcardList.test.tsx  FlashcardList.tsx  QueryProvider.tsx  TrashList.tsx
src/hooks/: useDocuments.test.tsx  useDocuments.ts  useGenerationJob.test.tsx  useGenerationJob.ts  useMutations.test.tsx  useMutations.ts
src/lib/: api-client.test.ts  api-client.ts  api.ts  query-keys.ts  store.test.ts  store.ts  test-utils.tsx  types.ts
web/: package-lock.json  package.json
web/src/app/: globals.css  page.tsx
web/src/app/document/[id]/: page.tsx
web/src/components/: DocumentList.tsx  FlashcardList.tsx  UploadZone.tsx
web/src/components/ui/: button.tsx
web/src/lib/: api.ts  types.ts
